# TravelChatBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_module/models/: agents.py  chatbot.py  chromadb.py  config.py  genai_client.py  prompt.py  schemas.py
ai_module/models/agents/: __init__.py  fusion.py  recommendation.py  retrieval.py  speech.py  vision.py
ai_module/models/chatbot_pipeline/: __init__.py  coordinator.py
backend/: auth_utils.py  database.db  database.py  main.py  manage_database.py  rate_limiter.py
backend/models/: __init__.py  base.py  chat.py  user.py
backend/routers/: __init__.py  auth.py  chat.py  user.py
backend/routers/api_v1/: __init__.py  auth.py  common.py  dashboard.py  destinations.py  evidence.py  images.py  planner.py  schemas.py  voice.py
crawler/: README.md  ivivu_blog_crawler.py
data/features/: metadata.json  metadata.sample.json
data/processed/: preprocessed_data.sample.jsonl
docs/: API_V1.md  ChromaDB.md  DataPipeline.md  REST_API.md  SETUP_GUIDE.md  StructAgents.md  UserDatabase.md
processer/: __init__.py  destination.py  ivivu_index.py  jsonl_utils.py  pipeline.py  preprocessing.py  text_cleaning.py
qa_ba/test/: test_api.py  test_chat_api.py  test_database.py  test_env_client.py  test_granular_limiter.py  test_rate_limiter.py  verify_single.py  verify_system.py
